--- a/BlazorWebSpaceTool/BlazorWebSpaceTool/Shared/NavMenu.razor
+++ b/BlazorWebSpaceTool/BlazorWebSpaceTool/Shared/NavMenu.razor
@@ -15,6 +15,11 @@
                     <span class="oi oi-moon" aria-hidden="true"></span> Experiment 2020
                 </NavLink>
             </li>
+            <li class="nav-item">
+                <NavLink class="nav-link" href="Vibe2020FullSystemTests">
+                    <span class="oi oi-data-transfer-download" aria-hidden="true"></span> Vibe2020 FullSystem Tests
+                </NavLink>
+            </li>
         </ul>
         <span class="navbar-text">
             To Infinity (and no further)
