--- a/BlazorWebSpaceTool/BlazorWebSpaceTool/Pages/Experiment2020.razor
+++ b/BlazorWebSpaceTool/BlazorWebSpaceTool/Pages/Experiment2020.razor
@@ -263,7 +263,7 @@
                 RunGyroscope = runGyro
             };
 
-            var result = await vibeClient.RunTimedProgramAsync(
+            var result = vibeClient.RunTimedProgram(
                                 request,
                                 deadline: DateTime.UtcNow.AddMinutes(inputModel.Minutes + 2), //Add padding to time to wait for I/O and other variables
                                 cancellationToken: CancellationToken.Token);
