--- a/BlazorWebSpaceTool/BlazorWebSpaceTool/Shared/MainLayout.razor
+++ b/BlazorWebSpaceTool/BlazorWebSpaceTool/Shared/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@inherits LayoutComponentBase
+@using BlazorWebSpaceTool.Components;
 
 <div class="main-grid">
     <div class="header">
@@ -10,6 +11,6 @@
     </div>
 
     <div class="footer">
-        @* Place important details about server health here *@
+        <BlazorWebSpaceTool.Components.Footer></BlazorWebSpaceTool.Components.Footer>
     </div>
 </div>
