--- a/BlazorWebSpaceTool/BlazorWebSpaceTool/wwwroot/css/site.css
+++ b/BlazorWebSpaceTool/BlazorWebSpaceTool/wwwroot/css/site.css
@@ -18,7 +18,7 @@ a, .btn-link {
     display: grid;
     grid-template-areas: "header" "content" "footer";
     grid-template-columns: 1fr;
-    grid-template-rows: min-content 1fr min-content;
+    grid-template-rows: min-content 1fr auto;
     grid-gap: 10px;
     height: 100vh;
 }
@@ -85,7 +85,7 @@ app {
 
 .subgrid {
     display: grid;
-    grid-template-areas: "subgridleft subgridcenter subgridright" "footer footer footer";
+    grid-template-areas: "subgridleft subgridcenter subgridright" "subgridfooter subgridfooter subgridfooter";
     grid-template-columns: minmax(min-content, 1fr) 3fr minmax(min-content, 1fr);
     grid-template-rows: 1fr min-content;
     grid-gap: 10px;
@@ -104,7 +104,7 @@ app {
 }
 
 .subgrid-footer {
-    grid-area: footer;
+    grid-area: subgridfooter;
 }
 
 .hidden{
